security updated and proper caching with redis.