@@ -2,18 +2,22 @@ package com.madeeasy.service.impl;
 
 import com.madeeasy.dto.request.CourseRequestDTO;
 import com.madeeasy.dto.response.CourseResponseDTO;
+import com.madeeasy.dto.response.ResponseDTO;
 import com.madeeasy.entity.Course;
 import com.madeeasy.exception.CourseInstanceDeletionException;
 import com.madeeasy.exception.CourseInstanceNotFoundException;
 import com.madeeasy.exception.CourseNotFoundException;
-import com.madeeasy.exception.ServiceUnavailableException;
 import com.madeeasy.repository.CourseRepository;
 import com.madeeasy.service.CourseService;
 import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
+import io.github.resilience4j.retry.annotation.Retry;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -21,10 +25,12 @@ import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.springframework.http.HttpStatus.BAD_REQUEST;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 
+@Slf4j
 @Service
 @Transactional
 @RequiredArgsConstructor
@@ -33,11 +39,14 @@ public class CourseServiceImpl implements CourseService {
     private final CourseRepository courseRepository;
     private final RestTemplate restTemplate;
     private final HttpServletRequest httpServletRequest;
-
     private final Logger logger = LoggerFactory.getLogger(CourseServiceImpl.class);
+    private final static String COURSE = "course";
 
     @Override
+    @CacheEvict(value = COURSE, key = "'getAllCourses'")
     public CourseResponseDTO createCourse(CourseRequestDTO courseRequestDTO) {
+
+        logger.info("Creating course: {}", courseRequestDTO);
 
         Course course = Course.builder()
                 .title(courseRequestDTO.getTitle())
@@ -57,6 +66,7 @@ public class CourseServiceImpl implements CourseService {
     }
 
     @Override
+    @Cacheable(value = COURSE, key = "#root.methodName", unless = "#result == null")
     public List<CourseResponseDTO> getAllCourses() {
         List<Course> courses = this.courseRepository.findAll();
 
@@ -74,12 +84,13 @@ public class CourseServiceImpl implements CourseService {
                         .courseCode(course.getCourseCode())
                         .description(course.getDescription())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Cacheable(value = COURSE, key = "#id", unless = "#result == null")
     public CourseResponseDTO getCourseById(Long id) {
-
+        logger.info("Fetching course with ID: {}", id);
         Course course = this.courseRepository.findById(id)
                 .orElseThrow(() -> new CourseNotFoundException("Course not found with id : " + id));
 
@@ -92,8 +103,9 @@ public class CourseServiceImpl implements CourseService {
     }
 
     @Override
+    @Cacheable(value = "courseByCode", key = "#courseCode", unless = "#result == null")
     public CourseResponseDTO getCourseByCourseCode(String courseCode) {
-
+        logger.info("Fetching course with courseCode : {}", courseCode);
         Course course = this.courseRepository.findByCourseCode(courseCode)
                 .orElseThrow(() -> new CourseNotFoundException("Course not found with courseCode : " + courseCode));
 
@@ -104,6 +116,7 @@ public class CourseServiceImpl implements CourseService {
                 .description(course.getDescription())
                 .build();
     }
+
 
     /**
      * Delete Course by ID :-
@@ -124,51 +137,55 @@ public class CourseServiceImpl implements CourseService {
      */
 
 
-    @CircuitBreaker(name = "myCircuitBreaker", fallbackMethod = "fallbackDeleteCourse")
     @Override
-    public void deleteCourse(Long id) {
+    @CacheEvict(value = COURSE, key = "#id")
+    @Retry(name = "myRetry", fallbackMethod = "fallbackDeleteCourse")
+    @CircuitBreaker(name = "myCircuitBreaker", fallbackMethod = "fallbackDeleteCourse")
+    public ResponseDTO deleteCourse(Long id) {
         // Check if the course exists before deleting
         if (!courseRepository.existsById(id)) {
-            throw new CourseNotFoundException("Course not found with ID: " + id);
+            return new ResponseDTO("Course with ID " + id + " does not exist.", NOT_FOUND);
         }
         // Proceed with the deletion of the course
         courseRepository.deleteById(id);
 
+        // Create the URL for deleting the related course instances
+        String courseServiceUrl = "http://course-instance-service/api/instances/courseId/" + id;
+
+        // Get the authorization header from the request
+        String authorizationHeader = httpServletRequest.getHeader(HttpHeaders.AUTHORIZATION);
+
+        // Create HttpEntity with the token
+        HttpEntity<String> requestEntity = createHttpEntityWithToken(authorizationHeader);
+
+        logger.info("Calling course instance service to delete course instance with ID: {}", id);
+
         try {
-            // Create the URL for deleting the related course instances
-            String courseServiceUrl = "http://course-instance-service/api/instances/courseId/" + id;
-
-            // Get the authorization header from the request
-            String authorizationHeader = httpServletRequest.getHeader(HttpHeaders.AUTHORIZATION);
-
-            // Create HttpEntity with the token
-            HttpEntity<String> requestEntity = createHttpEntityWithToken(authorizationHeader);
-
             // Make the DELETE request to the course instance service
             ResponseEntity<String> response = restTemplate.exchange(courseServiceUrl, HttpMethod.DELETE, requestEntity, String.class);
 
-            if (response.getStatusCode() == HttpStatus.NOT_FOUND) {
-                throw new CourseInstanceNotFoundException("Course instance with ID " + id + " not found in the course service.");
-            } else if (response.getStatusCode() != HttpStatus.OK) {
-                throw new CourseInstanceDeletionException("An error occurred while deleting the course instance with ID " + id);
+            // Check if the response status is 200 OK
+            if (response.getStatusCode().is2xxSuccessful()) {
+                logger.info("Course instance deleted successfully for course ID: {}", id);
+                return new ResponseDTO("Course with ID " + id + " has been successfully deleted.", HttpStatus.OK);
+            } else {
+                logger.error("Failed to delete course instance for course ID: {}. Response status: {}", id, response.getStatusCode());
+                return new ResponseDTO("Failed to delete course instance for course ID: " + id, HttpStatus.INTERNAL_SERVER_ERROR);
             }
-
         } catch (HttpClientErrorException e) {
-            logger.error("Client-side error: {}", e.getMessage());
-            handleClientErrorException(e, id);
-        }
-    }
-
-
-    private void handleClientErrorException(HttpClientErrorException e, Long id) {
-        HttpStatusCode statusCode = e.getStatusCode();
-        switch (statusCode) {
-            case NOT_FOUND:
-                throw new CourseInstanceNotFoundException("Course instance with ID " + id + " not found.");
-            case BAD_REQUEST:
-                throw new CourseInstanceDeletionException("Bad request while deleting course instance with ID " + id);
-            default:
-                throw new CourseInstanceDeletionException("Client-side error occurred while deleting course instance with ID " + id);
+            if (e.getStatusCode() == HttpStatus.NOT_FOUND) {
+                logger.error("Course instance not found for course ID: {}", id);
+                return new ResponseDTO("Course instance not found for course ID: " + id, HttpStatus.NOT_FOUND);
+            } else if (e.getStatusCode() == HttpStatus.BAD_REQUEST) {
+                logger.error("Bad request while deleting course instance: {}", e.getMessage());
+                return new ResponseDTO("Bad request while deleting course instance: " + e.getMessage(), HttpStatus.BAD_REQUEST);
+            } else {
+                logger.error("An error occurred while trying to delete course instance: {}", e.getMessage());
+                return new ResponseDTO("An error occurred while trying to delete course instance: " + e.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
+            }
+        } catch (Exception e) {
+            logger.error("An unexpected error occurred: {}", e.getMessage());
+            return new ResponseDTO("An unexpected error occurred: " + e.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
 
@@ -181,8 +198,13 @@ public class CourseServiceImpl implements CourseService {
         return new HttpEntity<>(headers);
     }
 
-    public void fallbackDeleteCourse(Long id, Throwable t) {
-        logger.error("Fallback error: {}", t.getMessage());
-        throw new ServiceUnavailableException("Service unavailable while deleting course instance with ID " + id);
+    public ResponseDTO fallbackDeleteCourse(Long id, Throwable t) {
+        log.error("message : {}", t.getMessage());
+        return ResponseDTO.builder()
+                .status(HttpStatus.SERVICE_UNAVAILABLE)
+                .message("Sorry !! Course deletion failed as Course Instance Service is unavailable. Please try again later.")
+                .build();
     }
 }
+
+
